--- a/plugins/otr/src/main/resources/i18n/otrplugin_i18n_de.properties
+++ b/plugins/otr/src/main/resources/i18n/otrplugin_i18n_de.properties
@@ -1,24 +1,24 @@
 
 # OTR language file
 
-otr.title = Off-the-Record Nachrichten Verschlüsselung
-otr.list.entry =  OTR Verschlüsselung
+otr.title = Off-the-Record Nachrichten VerschlÃ¼sselung
+otr.list.entry =  OTR VerschlÃ¼sselung
 otr.settings = OTR Einstellungen
 otr.enable = OTR Aktivieren
-current.priv.key = Aktueller privater Schlüssel:
-renew.current.key = Neuen Schlüssel generieren
-otr.close.session.on.window.close = OTR Sitzung schließen, wenn Chatfenster geschlossen wird
-otr.close.session.on.contact.off = OTR Sitzung schließen, wenn Kontakt sich abmeldet
-otr.key.not.verified.title = Schlüssel nicht beglaubigt
+current.priv.key = Aktueller privater SchlÃ¼ssel:
+renew.current.key = Neuen SchlÃ¼ssel generieren
+otr.close.session.on.window.close = OTR Sitzung schlieÃŸen, wenn Chatfenster geschlossen wird
+otr.close.session.on.contact.off = OTR Sitzung schlieÃŸen, wenn Kontakt sich abmeldet
+otr.key.not.verified.title = SchlÃ¼ssel nicht beglaubigt
 otr.question.verify = Beglaubigen?
-otr.key.not.verified.text = Folgender Schlüssel ist nicht beglaubigt:
+otr.key.not.verified.text = Folgender SchlÃ¼ssel ist nicht beglaubigt:
 otr.start.session.with = OTR Sitzung mit {0}
-otr.chat.button.tooltip = Nachrichtenverschlüsselung
+otr.chat.button.tooltip = NachrichtenverschlÃ¼sselung
 otr.not.enabled = Sie haben eine OTR Anfrage empfagen. Sie sollten OTR in den Einstellungen aktivieren.
-otr.chat.is.still.encrypted = OTR Sitzung aktiv. Nachrichten werden verschlüsselt. 
+otr.chat.is.still.encrypted = OTR Sitzung aktiv. Nachrichten werden verschlÃ¼sselt. 
 #Table Columns
 otr.table.jid = Kontakt
-otr.table.public.key = Öffentlicher Schlüssel
+otr.table.public.key = Ã–ffentlicher SchlÃ¼ssel
 otr.key.verified  = Beglaubigt
 
 
@@ -26,5 +26,5 @@ otr.key.verified  = Beglaubigt
 otr.retry = Wiederholen
 otr.try.to.connect.for.seconds = Versuche eine OTR Sitzung aufzubauen. {0}s verbleibend...
 otr.failed.to.establish = Fehler beim erstellen der Sitzung. Zeit abgelaufen. 
-otr.successfull = Sitzung erfolgreich erstellt. Nachrichten werden jetzt verschlüsselt.
-otr.disconnected = Sitzung geschlossen. Nachrichten sind ab jetzt nicht mehr verschlüsselt!
+otr.successfull = Sitzung erfolgreich erstellt. Nachrichten werden jetzt verschlÃ¼sselt.
+otr.disconnected = Sitzung geschlossen. Nachrichten sind ab jetzt nicht mehr verschlÃ¼sselt!
