--- a/plugins/roar/src/main/resources/i18n/roar_i18n_de.properties
+++ b/plugins/roar/src/main/resources/i18n/roar_i18n_de.properties
@@ -5,26 +5,26 @@ roar.settings = Roar Einstellungen
 roar.enabled = Popups aktiv
 roar.duration = Dauer in ms (0 = unbegrenzt):
 roar.amount = Maximale Anzahl von Popups (0 = unbegrenzt):
-roar.location = Popupecke auswählen (benötigt Neustart)
+roar.location = Popupecke auswÃ¤hlen (benÃ¶tigt Neustart)
 roar.display.topright = oben rechts
 roar.display.bottomright = unten rechts
 roar.background = Hintergrundfarbe
 roar.background.group = Hintergrundfarbe Gruppenchat
 roar.background.keyword = Hintergrundfarbe Stichwort
-roar.header = Überschrift
-roar.header.group = Überschrift Gruppenchat
-roar.header.keyword = Überschrift Stichwort
+roar.header = Ãœberschrift
+roar.header.group = Ãœberschrift Gruppenchat
+roar.header.keyword = Ãœberschrift Stichwort
 roar.text = Textfarbe
 roar.text.group = Textfarbe Gruppenchat
 roar.text.keyword = Textfarbe Stichwort
 
 roar.single = Einzelchat
-roar.single.disable = Roar für Einzelchats deaktivieren
+roar.single.disable = Roar fÃ¼r Einzelchats deaktivieren
 roar.group = Gruppenchat
-roar.group.different = Andere Einstellungen für Gruppenchats verwenden
-roar.group.disable = Roar für Gruppenchats deaktivieren
+roar.group.different = Andere Einstellungen fÃ¼r Gruppenchats verwenden
+roar.group.disable = Roar fÃ¼r Gruppenchats deaktivieren
 roar.keyword = Stichwortsuche
-roar.keyword.different = Andere Einstellungen für Stichwortsuche verwenden
+roar.keyword.different = Andere Einstellungen fÃ¼r Stichwortsuche verwenden
 roar.keyword.keyword = Stichworte (kommagetrennt)
 
 roar.display.system = Betriebssystem-Mitteilung
@@ -32,5 +32,5 @@ roar.display.system = Betriebssystem-Mitteilung
 roar.warning.topright = Roar-spezifische Popups. Flexibel anpassbar.
 roar.warning.bottomright = Roar-spezifische Popups. Flexibel anpassbar.
 roar.warning.toaster = Spark Toaster Popups. Farben sind <u>nicht</u> anpassbar.
-roar.warning.system = Betriebssystemabhängige Popups. Farben und Dauer sind <u>nicht</u> anpassbar.
+roar.warning.system = BetriebssystemabhÃ¤ngige Popups. Farben und Dauer sind <u>nicht</u> anpassbar.
 roar.warning.system.mac = Benutzt das Mitteilungs-Center (OSX 10.8 und neuer).<br>Farben und Dauer sind <u>nicht</u> anpassbar.<br>Weitere Einstellungen unter: Mac-Systemeinstellungen -&gt; Mitteilungen.
