--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_de.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_de.properties
@@ -32,11 +32,11 @@ phone.tryagain = Nochmal versuchen
 phone.call = Anrufen
 phone.voicemail = Sprachmitteilung
 phone.viewcallhistory = Anrufliste anschauen
-phone.placecall = Anruf tätigen
+phone.placecall = Anruf tÃ¤tigen
 phone.hangup = Anruf beenden
 phone.tips.hangup = Auflegen
 phone.home = Privat
-phone.work = Geschäftlich
+phone.work = GeschÃ¤ftlich
 phone.cell = Mobil
 phone.currentcall = Aktiver Anruf
 phone.incomingcall = Eingehender Anruf
@@ -49,14 +49,14 @@ phone.never = Noch nie
 phone.duration = Daur
 phone.accept = Annehmen
 phone.reject = Ablehnen
-phone.callback = Zurückrufen
-phone.delete = Löschen
+phone.callback = ZurÃ¼ckrufen
+phone.delete = LÃ¶schen
 phone.enternumber = Nummer zum Anrufen angeben
-phone.invalidnumber = Ungültige Nummer
+phone.invalidnumber = UngÃ¼ltige Nummer
 phone.outgoingcall = Ausgehender Anruf an
 phone.callhistory = Anrufliste
-phone.dialed = Gewählt
-phone.dialedcalls = Gewählte Nummern
+phone.dialed = GewÃ¤hlt
+phone.dialedcalls = GewÃ¤hlte Nummern
 phone.received = Eingegangen
 phone.receivedcalls = Eingegangene Anrufe
 phone.missed = Verpasst
@@ -67,7 +67,7 @@ phone.receivedcallfrom = Anruf erhalten von
 phone.missedcallfrom = Verpasster Anruf von
 phone.incomingcallfrom = Eingehender Anruf von
 phone.contactdetails = Kontakt Details
-phone.noinfo = Keine Informationen verfügbar
+phone.noinfo = Keine Informationen verfÃ¼gbar
 phone.viewfullprofile = Komplettes Profil ansehen
 phone.tips.mute = Diesen Anruf stummschalten
 phone.mute = Stummschalten
@@ -85,31 +85,31 @@ phone.callendedat = Anruf beendet:
 phone.onphonewith = Am Telefon mit
 phone.callendedwith = Anruf beendet mit
 phone.previousconversations = Vorherige Konversation
-phone.closeconfirm = Das Schließen dieses Raumes beendet den Anruf. Trotzdem fortfahren?
-phone.confirmation = Bestätigung
+phone.closeconfirm = Das SchlieÃŸen dieses Raumes beendet den Anruf. Trotzdem fortfahren?
+phone.confirmation = BestÃ¤tigung
 phone.all = Alle
 phone.allcalls = Alle Anrufe
 phone.tocall = Anruf
-btn.add  	= Hinzufügen
+btn.add  	= HinzufÃ¼gen
 btn.edit 	= Bearbeiten
-btn.del  	= Löschen
-btn.dial	= Wählen
+btn.del  	= LÃ¶schen
+btn.dial	= WÃ¤hlen
 book.name 	= Name
 book.number = Nummer
 frame.title	= Telefonbuch
 book.search = Suche
 btn.ok      = OK
 btn.cancel  = Abbrechen
-frame.add 	= Eintrag hinzufügen
+frame.add 	= Eintrag hinzufÃ¼gen
 frame.edit 	= Eintrag bearbeiten
 book.exists		= Der Telefonbuch Eintrag exisitert bereits.
-book.noEntry	= Kein Eintrag ausgewählt
-book.fillFields = Bitte alle Felder ausfüllen
+book.noEntry	= Kein Eintrag ausgewÃ¤hlt
+book.fillFields = Bitte alle Felder ausfÃ¼llen
 book.warning	= Achtung
 title.sip.codecs.title = Codecs
-codecs.select	= \u21E6 Auswählen
-codecs.unselect = Abwählen \u21E8
+codecs.select	= \u21E6 AuswÃ¤hlen
+codecs.unselect = AbwÃ¤hlen \u21E8
 codecs.up = Rauf \u21E7
 codecs.down	= Runter \u21E9
-codecs.audio.selected	= Ausgewählte Codecs
-codecs.audio.avail		= Verfügbare Codecs
+codecs.audio.selected	= AusgewÃ¤hlte Codecs
+codecs.audio.avail		= VerfÃ¼gbare Codecs
