--- a/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_pt_BR.properties
+++ b/plugins/sip/src/main/java/org/jivesoftware/spark/plugin/phone/resource/sip_spark_i18n_pt_BR.properties
@@ -31,31 +31,31 @@ phone.failed = Falha ao iniciar phone
 phone.tryagain = Conectar
 phone.call = Chamada
 phone.voicemail = Voice Mail
-phone.viewcallhistory = Ver histórico de chamadas
+phone.viewcallhistory = Ver histÃ³rico de chamadas
 phone.placecall = Fazer Chamada
 phone.hangup = Desligar
 phone.tips.hangup = Desliga a Chamada
-phone.home = Residência
+phone.home = ResidÃªncia
 phone.work = Trabalho
 phone.cell = Celular
 phone.currentcall = Chamada Atual
-phone.noprevious = Não há chamadas anteriores
+phone.noprevious = NÃ£o hÃ¡ chamadas anteriores
 phone.callended = Fim da Chamada
 phone.transferto = Chamada transferida para
 phone.connected = Conectado
 phone.incomingcall = Chamada recebida de...
-phone.lastcalled = Última Chamada
+phone.lastcalled = Ãšltima Chamada
 phone.never = Nunca
-phone.duration = Duração
+phone.duration = DuraÃ§Ã£o
 phone.accept = Aceitar
 phone.reject = Rejeitar
 phone.callback = Chamar de volta
 phone.delete = Deletar
 phone.missedcalls = Chamadas Perdidas
-phone.enternumber = Entre com o número
-phone.invalidnumber = Número Inválido
+phone.enternumber = Entre com o nÃºmero
+phone.invalidnumber = NÃºmero InvÃ¡lido
 phone.outgoingcall = Chamada para
-phone.callhistory = Histórico de Chamadas
+phone.callhistory = HistÃ³rico de Chamadas
 phone.dialed = Realizadas
 phone.dialedcalls = Chamadas Realizadas
 phone.received = Recebidas
@@ -67,7 +67,7 @@ phone.receivedcallfrom = Chamada Recebidade de
 phone.missedcallfrom = Chamada Perdida de
 phone.incomingcallfrom = Chamada Recebida de
 phone.contactdetails = Detalhes do Contato
-phone.noinfo = Informação Indisponível
+phone.noinfo = InformaÃ§Ã£o IndisponÃ­vel
 phone.viewfullprofile = Ver Detalhes
 phone.tips.mute = Mudo
 phone.mute = Mudo
@@ -80,13 +80,13 @@ phone.tips.transfer = Transfere a chamada
 phone.transfer = Transferir
 phone.transferring = Transferindo
 phone.transfered = Transferido
-phone.callstartedat = Chamada iniciada às
-phone.callendedat = Chamada finalizada às
+phone.callstartedat = Chamada iniciada Ã s
+phone.callendedat = Chamada finalizada Ã s
 phone.onphonewith = Conversando com
 phone.callendedwith = Chamada Finalidada com
 phone.previousconversations = Conversar Anteriores
-phone.closeconfirm = Fechando a janela você irá desligar a chamada. Continuar?
-phone.confirmation = Confirmação
+phone.closeconfirm = Fechando a janela vocÃª irÃ¡ desligar a chamada. Continuar?
+phone.confirmation = ConfirmaÃ§Ã£o
 phone.all = Todas
 phone.allcalls = Todas Chamadas
 phone.tocall = Chamar
