--- a/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_de.properties
+++ b/plugins/spelling/src/main/resources/i18n/spellchecker_i18n_de.properties
@@ -1,9 +1,9 @@
-title.spellchecker = Rechtschreibprüfung
+title.spellchecker = RechtschreibprÃ¼fung
 
-preference.spellcheckingEnabled = &Rechtschreibprüfung aktivieren
-preference.autoSpellcheckingEnabled = &Automatische Rechtschreibprüfung aktivieren
+preference.spellcheckingEnabled = &RechtschreibprÃ¼fung aktivieren
+preference.autoSpellcheckingEnabled = &Automatische RechtschreibprÃ¼fung aktivieren
 preference.language = &Sprache
-preference.ignore.uppercasedword = &Groß- und Kleinschreibung ignorieren
-button.check.spelling = Rechtschreibung überprüfen
+preference.ignore.uppercasedword = &GroÃŸ- und Kleinschreibung ignorieren
+button.check.spelling = Rechtschreibung Ã¼berprÃ¼fen
 preference.show.langauage.in.chat.windows = Erlaube Auswahl der Sprache im Chatfenster
 dialog.no.mistakes = Keine Rechtschreibfehler
