--- a/plugins/flashing/src/main/resources/i18n/flashing_i18n_de.properties
+++ b/plugins/flashing/src/main/resources/i18n/flashing_i18n_de.properties
@@ -3,4 +3,4 @@ title.flashing = Blinkende Taskleiste
 flashing.enable = &Blinken in der Taskleiste aktivieren
 flashing.type = &Art
 flashing.type.continuous = Durchgehend
-flashing.type.temporary = Tempor‰r
+flashing.type.temporary = Tempor√§r
