--- a/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_de.properties
+++ b/plugins/transferguard/src/main/resources/i18n/transferguard_i18n_de.properties
@@ -42,12 +42,12 @@
 ##
 
 guard.settings.title.settings = File Transfer Einstellungen
-guard.settings.tooltips.blockedtypes = Bitte geben Sie Dateiendungen ein, die blockiert werden sollen (z.B. '*.doc'). Mehrere Eingaben mit Komma getrennt möglich.
-guard.settings.tooltips.blockedperson = Bitte geben Sie die JIDs der Benutzer ein, von denen Sie den Dateitransfer blockieren wollen (z.B. 'loser@domain.com'). Mehrere Eingaben mit Komma getrennt möglich.
-guard.settings.tooltips.textarea = Bitte geben Sie eine Nachricht für die Nutzer ein, deren Dateien durch Ihre Einstellungen blockiert wurden. Lassen Sie dieses feld frei, wenn Sie keine Nachricht senden wollen.
+guard.settings.tooltips.blockedtypes = Bitte geben Sie Dateiendungen ein, die blockiert werden sollen (z.B. '*.doc'). Mehrere Eingaben mit Komma getrennt mÃ¶glich.
+guard.settings.tooltips.blockedperson = Bitte geben Sie die JIDs der Benutzer ein, von denen Sie den Dateitransfer blockieren wollen (z.B. 'loser@domain.com'). Mehrere Eingaben mit Komma getrennt mÃ¶glich.
+guard.settings.tooltips.textarea = Bitte geben Sie eine Nachricht fÃ¼r die Nutzer ein, deren Dateien durch Ihre Einstellungen blockiert wurden. Lassen Sie dieses feld frei, wenn Sie keine Nachricht senden wollen.
 guard.settings.title.extensions = Blockierte Dateiendungen
 guard.settings.title.person = Blockierte Sender
-guard.settings.title.rejectresponse = Nachricht für automatisches Abweisen
-guard.settings.label.maxsize = Maximale Größe in KB:
-guard.settings.title.filesize = Dateigröße
-guard.settings.limitcheck = Limit für Dateigröße
+guard.settings.title.rejectresponse = Nachricht fÃ¼r automatisches Abweisen
+guard.settings.label.maxsize = Maximale GrÃ¶ÃŸe in KB:
+guard.settings.title.filesize = DateigrÃ¶ÃŸe
+guard.settings.limitcheck = Limit fÃ¼r DateigrÃ¶ÃŸe
