--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -1129,7 +1129,8 @@ dialog.confirm.to.reveal.visibility.msg = Jeigu tęsite, jūsų nematomumas bus 
 dialog.confirm.close.all.conferences.if.invisible.msg = Jeigu tęsite, visi konferencijų kambariai bus uždaryti
 dialog.certificate.provide.alias.and.confirm = \t Suteikite vardą Truststore įrašui. \n Ar tikrai norite pridėti ?į \n sertifikatą į jūsų Truststore?
 dialog.certificate.show = <html>Tai sertifikatas kurį bandote pridėti į Truststore. <br><br> Po šio sertifikato įtraukimo Spark galės užmegzti apsaugotą <br> ryšį su serveriais kurie identifikuojami su šiuo sertifikatu. <br><br> Jei esate tikri, kad norite prid?ti šį sertifikatą, paspauskite OK mygtuką.</html>
-dialog.certificate.add.from.connection = <html>Tai sertifikatas, kurį pateikė serveris prie kurio bandote prisijungti.<br> Šis sertifikatas nėra įtrauktas į jūsų TrustStore, kas reiškia, kad juo dar nepasitikite<br> ir todėl negalite prisijungti prie serverio. <br><br> Ar norite pasitikėti juo ir įtraukti šį sertifikatą į jūsų TrustStore?</html>
+dialog.certificate.add.from.connection = Pridėti grandinę
+dialog.certificate.chain.add.from.connection = <html>Tai sertifikato granginę, kurią pateikė serveris, prie kurio bandote jungtis.<br> Jis nėra jųsų patikimų sertifikatų sąraše, todėl neįmanoma užmegzti saugaus ryšio.<br><br> Ar norite pridėti jį ar visą grandinę į jūsų patikimų sertifikatų sąrašą?</html>
 dialog.certificate.cannot.have.copy = Šis sertifikatas jau yra patalpintas Truststore.
 dialog.certificate.has.been.added = Sertifikatas pridėtas į Truststore.
 dialog.certificate.is.distrusted = Sertifikatas negaliojantis, todėl jo nereikėtų pasitikėti, nes tai gali būti pavojinga. \n Jei vis tiek norite jį priimti, spauskite Trust mygtuką arba pridėkite jį į išim?ių sąrašą.
