SPARK-2001 simplified strings

--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -1131,7 +1131,7 @@ dialog.certificate.provide.alias.and.confirm = \t Suteikite vardą Truststore į
 dialog.certificate.show = <html>Tai sertifikatas kurį bandote pridėti į Truststore. <br><br> Po šio sertifikato įtraukimo Spark galės užmegzti apsaugotą <br> ryšį su serveriais kurie identifikuojami su šiuo sertifikatu. <br><br> Jei esate tikri, kad norite prid?ti šį sertifikatą, paspauskite OK mygtuką.</html>
 dialog.certificate.add.from.connection = <html>Tai sertifikatas, kurį pateikė serveris prie kurio bandote prisijungti.<br> Šis sertifikatas nėra įtrauktas į jūsų TrustStore, kas reiškia, kad juo dar nepasitikite<br> ir todėl negalite prisijungti prie serverio. <br><br> Ar norite pasitikėti juo ir įtraukti šį sertifikatą į jūsų TrustStore?</html>
 dialog.certificate.add.chain = Pridėti grandinę
-dialog.certificate.chain.add.from.connection = <html>Tai sertifikato granginę, kurią pateikė serveris prie kurio bandote jungtis.<br> Jis nėra jųsų patikimų sertifikatų sąraše, todėl neįmanoma užmegzti saugaus ryšio.<br><br> Ar norite pridėti jį ar visą grandinę į jūsų patikimų sertifikatų sąrašą?</html>
+dialog.certificate.chain.add.from.connection = <html>Tai sertifikato granginė pateikta serverio prie kurio jungiatės.<br> Ji nėra patikimų sąraše, todėl negalite prisijungti.<br><br> Ar norite pridėti šį sertifikatą ar visą grandinę į jūsų patikimų sąrašą?</html>
 dialog.certificate.cannot.have.copy = Šis sertifikatas jau yra patalpintas Truststore.
 dialog.certificate.has.been.added = Sertifikatas pridėtas į Truststore.
 dialog.certificate.is.distrusted = Sertifikatas negaliojantis, todėl jo nereikėtų pasitikėti, nes tai gali būti pavojinga. \n Jei vis tiek norite jį priimti, spauskite Trust mygtuką arba pridėkite jį į išim?ių sąrašą.
