--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1193,6 +1193,7 @@ dialog.certificate.show = <html>This is the certificate and private key you are 
 dialog.id.certificate.show = <html>This is the certificate you are trying to add to the Identitystore <br><br> After adding this certificate Spark will be able to present this certificate to remote server during establishing connection in order to authenticate itself and encrypt that connection. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.certificate.add.from.connection = <html>This is the certificate provided by the server you are trying to connect to. <br> This certificate isn't in your TrustStore, which means it is not trusted<br> and you cannot connect to this server. <br><br> Do you want to trust it and add this certificate to your TrustStore?</html>
 dialog.certificate.add.chain = Add chain
+dialog.certificate.presented.by.server = <html>This is certificate presented by server. <br>  Do you wan't to trust it and add to exceptions? <br><br> Click advanced if you want to check more <br> information about presented certificates</html>
 dialog.certificate.chain.add.from.connection = <html>This is the certificate chain provided by the server you connecting to. <br> It is not on the list of your trusted certificates, so you can't make an encrypted connection. <br><br> Do you want to add it to trusted certificates?</html> 
 dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
 dialog.certificate.has.been.added = Certificate has been added to the Truststore.
