--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -1132,7 +1132,7 @@ dialog.certificate.provide.alias.and.confirm = \t Suteikite vardą Truststore į
 dialog.certificate.show = <html>Tai sertifikatas kurį bandote pridėti į Truststore. <br><br> Po šio sertifikato įtraukimo Spark galės užmegzti apsaugotą <br> ryšį su serveriais kurie identifikuojami su šiuo sertifikatu. <br><br> Jei esate tikri, kad norite prid?ti šį sertifikatą, paspauskite OK mygtuką.</html>
 dialog.certificate.add.from.connection = <html>Tai sertifikatas, kurį pateikė serveris prie kurio bandote prisijungti.<br> Šis sertifikatas nėra įtrauktas į jūsų TrustStore, kas reiškia, kad juo dar nepasitikite<br> ir todėl negalite prisijungti prie serverio. <br><br> Ar norite pasitikėti juo ir įtraukti šį sertifikatą į jūsų TrustStore?</html>
 dialog.certificate.add.chain = Pridėti grandinę
-dialog.certificate.presented.by.server = <html>Tai sertifikatas pateitkas serverio prie kurio jungiatės. Ar norite<br> pasitikėti juo ir pridėti į patikimų sąrašą?<br><br>Paspauskite Sertifikatas mygtuką norint pamatyti daugiau informacijos <br>apie šį sertifikatą.</html>
+dialog.certificate.presented.by.server = <html>Tai sertifikatas pateiktas serverio prie kurio jungiatės. Ar norite<br> pasitikėti juo ir pridėti į patikimų sąrašą?<br><br>Paspauskite Sertifikatas mygtuką norint pamatyti daugiau informacijos <br>apie šį sertifikatą.</html>
 dialog.certificate.chain.add.from.connection = <html>Tai sertifikato granginė pateikta serverio prie kurio jungiatės.<br> Ji nėra patikimų sąraše, todėl negalite prisijungti.<br><br> Ar norite pridėti šį sertifikatą ar visą grandinę į jūsų patikimų sąrašą?</html>
 dialog.certificate.cannot.have.copy = Šis sertifikatas jau yra patalpintas Truststore.
 dialog.certificate.has.been.added = Sertifikatas pridėtas į Truststore.
