Fix adding certificates to identity KeyStore. Enforce style "KeyStore" instead of "Keystore". Codestyle changes (empty lines, trailing spaces).

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -536,8 +536,8 @@ label.trust.store.password = Trust store password
 label.enter.password = Enter password
 label.move.focus.forwards = Move focus forwards
 label.move.focus.backwards = Move focus backwards
-label.keystore.location = Keystore location
-label.truststore.location = Truststore location
+label.keystore.location = KeyStore location
+label.truststore.location = TrustStore location
 label.pkcs.library.file = PKCS#11 library file
 label.x509.certificate = X.509 certificate
 label.apple.keychain = Apple KeyChain
@@ -556,8 +556,8 @@ label.certificate.public.key = Public key
 label.certificate.public.key.algorithm = Public key algorithm
 label.certificate.issuer.unique.id = Issuer unique ID
 label.certificate.subject.unique.id = Subject unique ID
-label.certificate.add.certificate.to.truststore = Add certificate to Truststore
-label.certificate.add.certificate.to.identitystore = Add certificate to Identitystore
+label.certificate.add.certificate.to.truststore = Add certificate to TrustStore
+label.certificate.add.certificate.to.identitystore = Add certificate to IdentityStore
 label.certificate.status = Status of the certificate.
 
 menuitem.about = About
@@ -1189,13 +1189,14 @@ action.viewlog=View Log
 dialog.confirm.to.reveal.visibility.title=Are you sure?
 dialog.confirm.to.reveal.visibility.msg=If you are going to proceed your invisibility will be revealed
 dialog.confirm.close.all.conferences.if.invisible.msg = If you want to proceed all conference rooms will be closed
-dialog.certificate.show = <html>This is the certificate and private key you are trying to add to the Truststore. <br><br> After adding this certificate Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
-dialog.id.certificate.show = <html>This is the certificate you are trying to add to the Identitystore <br><br> After adding this certificate Spark will be able to present this certificate to remote server during establishing connection in order to authenticate itself and encrypt that connection. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
+dialog.certificate.show = <html>This is the certificate and private key you are trying to add to the TrustStore. <br><br> After adding this certificate Spark will be able to establish secured <br> communications with servers that are identified by this certificate. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
+dialog.id.certificate.show = <html>This is the certificate you are trying to add to the IdentityStore <br><br> After adding this certificate Spark will be able to present this certificate to remote server during establishing connection in order to authenticate itself and encrypt that connection. <br><br> If you are sure that you want to add this certificate click the OK button.</html>
 dialog.certificate.add.from.connection = <html>This is the certificate provided by the server you are trying to connect to. <br> This certificate isn't in your TrustStore, which means it is not trusted<br> and you cannot connect to this server. <br><br> Do you want to trust it and add this certificate to your TrustStore?</html>
 dialog.certificate.presented.by.server = <html>This is the certificate presented by the server. Do you wan't to trust<br> it and add to exceptions? <br><br>Click Details button, if you want to see more information about the<br> presented certificate.</html>
 dialog.certificate.chain.add.from.connection = <html>This is the certificate chain provided by the server you are connecting to. <br> It is not in your trusted list, so you can't connect. <br><br> Do you want to add this certificates to your trusted list?</html> 
-dialog.certificate.cannot.have.copy = This certificate is already stored within Truststore.
-dialog.certificate.has.been.added = Certificate has been added to the Truststore.
+dialog.certificate.cannot.have.copy = This certificate is already stored within TrustStore.
+dialog.certificate.has.been.added = Certificate has been added to the TrustStore.
+dialog.certificate.has.been.added.to.identity.store = Certificate has been added to the IdentityStore.
 dialog.certificate.is.distrusted = Certificate is invalid, so it shouldn't be trusted, as it is dangerous. \n If you still want to trust it, click on Trust radio button or add it to exception list.
 dialog.certificate.sure.to.delete = Are you sure that you want to delete this certificate? \nIf you do it, you will be unable to establish a secured connection \nto servers identified by this certificate.
 dialog.certificate.has.been.deleted = Certificate has been successfully deleted.
