SPARK-1991 By default add self signed certificates to IdentityStore

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -1212,6 +1212,7 @@ cert.expired = Expired
 cert.not.valid.yet = Not valid yet
 cert.self.signed = Self signed
 cert.sign.request = Certificate Signing Request 
+cert.self.signed.save.to.file = Save certificate to file
 cert.unknown.oid = Unknown OID description.
 cert.is.critical = Is critical: 
 cert.critical = Critical:
