SPARK-2019 add (requires restart) to option

--- a/core/src/main/resources/i18n/spark_i18n.properties
+++ b/core/src/main/resources/i18n/spark_i18n.properties
@@ -374,7 +374,7 @@ checkbox.show.toaster = Show a &toast popup
 checkbox.disable.asterisk.toaster = Disable phone toast popup
 checkbox.split.chat.window = Dock windows (requires restart)
 checkbox.start.in.tray = &Start in system tray
-checkbox.click.single.tray = S&ingle click in system tray brings Spark to front
+checkbox.click.single.tray = S&ingle click in system tray brings Spark to front (requires restart)
 checkbox.tabs.on.top = Chat tabs &appear on top (requires restart)
 checkbox.use.compression = Use compression
 checkbox.use.debugger.on.startup = Start debugger on startup
