--- a/core/src/main/resources/i18n/spark_i18n_de.properties
+++ b/core/src/main/resources/i18n/spark_i18n_de.properties
@@ -363,7 +363,7 @@ checkbox.show.toaster = Informationen in einem &Popup anzeigen
 checkbox.disable.asterisk.toaster = Popups von Anrufen deaktivieren
 checkbox.split.chat.window = &Fenster 'andocken' (benötigt Neustart von Spark)
 checkbox.start.in.tray = Spark automatisch in der &Taskleiste starten
-checkbox.click.single.tray = &Einfachen Klick im System Tray verwenden, um Spark in den Vordergrund zu bringen
+checkbox.click.single.tray = &Einfachen Klick im System Tray verwenden, um Spark in den Vordergrund zu bringen (benötigt Neustart von Spark)
 checkbox.tabs.on.top = &Chat-Tabs oben anzeigen (benötigt Neustart von Spark)
 checkbox.use.compression = Komprimierung verwenden
 checkbox.use.debugger.on.startup = Debugger beim Starten öffnen
