--- a/core/src/main/resources/i18n/spark_i18n_it.properties
+++ b/core/src/main/resources/i18n/spark_i18n_it.properties
@@ -333,7 +333,7 @@ button.view.tasklist = Mostra lista impegni
 checkbox.allow.buzz = Abilita gli utenti ad attira&re la tua attenzione.
 checkbox.auto.discover.port = &Rileva Automaticamente host e porta
 checkbox.auto.login = &Login Automatico
-checkbox.click.single.tray = &Usa singolo click nella tray bar per portare spark in primo piano
+checkbox.click.single.tray = &Usa singolo click nella tray bar per portare spark in primo piano (richiede riavvio)
 checkbox.disable.asterisk.toaster = Disabilita popup a comparsa
 checkbox.disable.chat.history = &Disattiva la Cronologia nella Chat
 checkbox.disable.prev.chat.history = Non &mostrare più le precedenti conversazioni della chat
