--- a/core/src/main/resources/i18n/spark_i18n_lt.properties
+++ b/core/src/main/resources/i18n/spark_i18n_lt.properties
@@ -332,7 +332,7 @@ checkbox.show.toaster = Rodyti iššokantį pranešimą
 checkbox.disable.asterisk.toaster = Išjungti skambučio iššokantį pranešimą
 checkbox.split.chat.window = Lango įt&virtinimas (reikės iš naujo paleisti programą)
 checkbox.start.in.tray = &Startuoti sistemos juostelėje
-checkbox.click.single.tray = Vie&nas paspaudimas sistemos juostelėje pakelia Spark langą
+checkbox.click.single.tray = Vie&nas paspaudimas sistemos juostelėje pakelia Spark langą (reikės iš naujo paleisti programą)
 checkbox.tabs.on.top = &Pokalbių korteles rodyti viršuje (reikės iš naujo paleisti programą)
 checkbox.use.compression = Nau&doti suspaudimą
 checkbox.use.debugger.on.startup = S&tartavus įjungti klaidų paieškos veikseną 
