--- a/core/src/main/resources/i18n/spark_i18n_pl.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pl.properties
@@ -170,7 +170,7 @@ checkbox.show.toaster = Pokazuj wyskakujące okienko
 checkbox.disable.asterisk.toaster = Wyłącz wyskakujące okienko rozmów telefonicznych
 checkbox.split.chat.window = Podziel okna rozmów (wymagany restart)
 checkbox.start.in.tray = Wyświetlaj zakładki rozmów na górze (wymagany restart)
-checkbox.click.single.tray = Pojedyncze kliknięcie ikony w trayu wywołuje główne okno Sparka
+checkbox.click.single.tray = Pojedyncze kliknięcie ikony w trayu wywołuje główne okno Sparka (wymagany restart)
 checkbox.tabs.on.top = Zakładki rozmowy na wierzchu (wymagany restart)
 checkbox.use.compression = Używaj kompresji
 checkbox.use.debugger.on.startup = Uruchom śledzenie błędów przy starcie
