--- a/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
+++ b/core/src/main/resources/i18n/spark_i18n_pt_BR.properties
@@ -89,7 +89,7 @@ checkbox.reconnect.panel.big = Exibir painel
 checkbox.reconnect.panel.small = Exibir como grupo de contato
 checkbox.reconnect.panel.icon = Exibir ícone
 checkbox.start.in.tray = &Iniciar na bandeja
-checkbox.click.single.tray = Clique &simples no ícone da bandeja traz a janela do Spark para frente
+checkbox.click.single.tray = Clique &simples no ícone da bandeja traz a janela do Spark para frente (Necessita reiniciar)
 checkbox.split.chat.window = Encaixar &janelas (Necessário reiniciar)
 checkbox.notify.user.goes.offline = Notificar quando usuário ficar offline
 checkbox.notify.user.comes.online = Notificar quando usuário ficar online
