--- a/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
+++ b/core/src/main/resources/i18n/spark_i18n_ru_RU.properties
@@ -225,7 +225,7 @@ checkbox.reconnect.panel.big = Показывать панель
 checkbox.reconnect.panel.small = Показывать в списке групп
 checkbox.reconnect.panel.icon = Показывать иконку
 checkbox.start.in.tray = Запускать свёрнутым в трей
-checkbox.click.single.tray = Использовать одиночный клик в трее чтобы активировать Spark
+checkbox.click.single.tray = Использовать одиночный клик в трее чтобы активировать Spark (требуется перезапуск)
 checkbox.split.chat.window = Прикреплять к окнам (требуется перезапуск)
 checkbox.tabs.on.top = Открывать чат поверх окон (требуется перезапуск)
 checkbox.use.compression = Использовать сжатие
