--- a/core/src/main/resources/i18n/spark_i18n_uk_UA.properties
+++ b/core/src/main/resources/i18n/spark_i18n_uk_UA.properties
@@ -451,7 +451,7 @@ checkbox.auto.login                       = &Автовхід
 checkbox.broadcast.hide.offline.user      = Сховати відключених
 checkbox.check.crl                        = Перевірка CRL
 checkbox.check.ocsp                       = Перевірка OCSP
-checkbox.click.single.tray                = &Одинарне клацання в ситемному лотку відкриває Spark
+checkbox.click.single.tray                = &Одинарне клацання в ситемному лотку відкриває Spark (потрібен перезапуск)
 checkbox.conference.tab.setting           = Показати службу конференцій у закладці (потрібен перезапуск)
 checkbox.disable.asterisk.toaster         = Вимкнути телефонні спливаючі вікна
 checkbox.disable.chat.history             = &Вимкнути історію бесіди
