--- a/core/src/main/resources/i18n/spark_i18n_zh_CN.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_CN.properties
@@ -359,7 +359,7 @@ checkbox.show.time.in.chat.window = (&S) 在对话窗口显示时间
 checkbox.show.toaster = (&T) 显示一个弹出窗口
 checkbox.split.chat.window = (&W) 聊天窗口停靠 (要求重新启动)
 checkbox.start.in.tray = (&S) 启动后显示到系统托盘中
-checkbox.click.single.tray = (&U) 单击托盘图标弹出Spark
+checkbox.click.single.tray = (&U) 单击托盘图标弹出Spark(要求重新启动)
 checkbox.tabs.on.top = (&C) 联系人标签置顶端(要求重新启动)
 checkbox.use.compression = (&m)启用压缩
 checkbox.use.debugger.on.startup = 启动时进入调试模式
