--- a/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
+++ b/core/src/main/resources/i18n/spark_i18n_zh_TW.properties
@@ -383,7 +383,7 @@ checkbox.use.version.as.resource	=	使用 Spark 版本作為來源
 checkbox.use.pki.authentication	=	使用PKI認證
 checkbox.broadcast.hide.offline.user	=	隱藏離線聯絡人
 checkbox.show.avatars.in.contactlist	=	在聯絡人列表顯示頭像
-checkbox.click.single.tray	=	滑鼠點擊一下即可進入Spark的系統前台
+checkbox.click.single.tray	=	滑鼠點擊一下即可進入Spark的系統前台(需重新啟動 Spark)
 checkbox.sort.asc.history	=	對話記錄依日期由遠而近排序
 checkbox.disable.prev.chat.history	=	不顯示之前的聊天記錄
 checkbox.graying.out	=	淡化閒置聯絡人(需重新啟動 Spark)
